# inferbench-rest-grpc-vision

./: README.md  docker-compose.yml  requirements.txt
client/: client.py  clientgui.py  img_service_pb2_grpc.py  pyproject.toml
client/proto/: img_service.proto
grpc_service/: Dockerfile  img_service_pb2.py  main.py  pyproject.toml
grpc_service/proto/: img_service.proto
grpc_service/storage/: records.csv
rest_service/: Dockerfile  main.py  pyproject.toml
rest_service/storage/: records.csv
